name:                allpro-backend
version:             0.1.0.0
synopsis:            Backend for Allpro workout helper
description:         Please see README.md
homepage:            https://github.com/pengstrom/allpro-backend
license:             GPL-3
license-file:        LICENSE
author:              Per Engström
maintainer:          contact@perengstrom.com
copyright:           2016 Per Engström
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Workout
                     , Config
                     , Time
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , time
                     , postgresql-simple
  default-language:    Haskell2010

executable allpro-backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base-compat
                     , allpro-backend
                     , servant-server
                     , postgresql-simple
                     , text
                     , bytestring
                     , mtl
                     , aeson
                     , attoparsec
                     , wai
                     , warp
                     , base
                     , aeson-compat
                     , string-conversions
                     , wai-cors
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pengstrom/allpro-backend
